# assignments

./: .gitignore  FULL_TECHNICAL_WALKTHROUGH.md  INTERVIEW_PREP_AI_USAGE.md  MASTER_DOCUMENTATION.md
assignment-2/: Cargo.toml  Dockerfile  README.md
assignment-2/api/: openapi.yaml
assignment-2/db/: schema.sql
assignment-2/diagrams/: architecture.md
assignment-2/docs/: ARCHITECTURE.md  DEEP_DIVE.md  OBSERVABILITY.md  PRODUCTION_HARDENING.md  SECURITY.md
assignment-2/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  istio-mtls.yaml  namespace.yaml  network-policy.yaml  secret.yaml  service.yaml
assignment-2/k8s/observability/: grafana-dashboard.md  servicemonitor.yaml
assignment-2/src/: main.rs
assignment-2/src/config/: mod.rs
assignment-2/src/domain/: issuance.rs  mod.rs  model.rs  ports.rs
assignment-2/src/http/: handlers.rs  mod.rs  router.rs
assignment-2/src/infra/: mod.rs  postgres.rs  signing.rs
assignment-2/src/observability/: mod.rs  tracing.rs
assignment-2/src/security/: mod.rs
assignment-3/: .dockerignore  .env.example  (+7 more)
assignment1/: .env.example  .gitignore  Cargo.toml  DEEP_DIVE.md  Dockerfile  README.md  build.rs  docker-compose.yml
assignment1/.sqlx/: query-1d9e623a3119844c598b9f5f8f28a62065e0b48c8a73d634acff5ed7cf5db93d.json  query-e252adf2daa2d842f8ff4a887a3c4f9fc1fd74ff8ed60df822f638ae8b0e7fc1.json
assignment1/migrations/: 20260514_create_certificates_table.sql
assignment1/src/: config.rs  errors.rs  lib.rs  main.rs
assignment1/src/db/: mod.rs
assignment1/src/handlers/: certificate.rs  health.rs  mod.rs
assignment1/src/models/: certificate.rs  dto.rs  mod.rs
assignment1/src/repositories/: certificate_repository.rs  mod.rs
assignment1/src/routes/: mod.rs
assignment1/src/services/: certificate_service.rs  mod.rs
assignment1/tests/: integration.rs
(+20 files in other folders)
