[package]
name = "certificate_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json", "macros", "tokio", "tracing"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
tower-http = { version = "0.5", features = ["trace"] }
x509-parser = "0.14"
anyhow = "1.0"

[features]
default = []
sqlx-check = []

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
